# tsor

./: .gitignore  .gitmodules  AppImage.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  cmake-single-platform.yml  cmake.yml
include/: gui.h  m2ts.h  ts.h
src/: tsor.cpp
src/gui/: gui.cpp  gui.h
src/gui/font/: Inter.h
src/m2ts/: m2ts.cpp
src/ts/: CMakeLists.txt  pid.h  ts.cpp  ts.h
src/util/: CMakeLists.txt  options.cpp  options.h  time.cpp  time.h  version.h.in
